[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Cal_head_idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SkeletonHead.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=3]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.8754, 14.7043 )

[sub_resource type="Animation" id=2]
resource_name = "Hopping"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="SkeletonHead" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.31498, 25.8284 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Hopping"
anims/Hopping = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="GUI" parent="." instance=ExtResource( 3 )]
[connection signal="game_over" from="." to="GUI" method="_on_SkeletonHead_game_over"]
[connection signal="health_changed" from="." to="GUI" method="_on_SkeletonHead_health_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="restart_level" from="GUI" to="." method="_on_GUI_restart_level"]
